--- a/dist.env
+++ b/dist.env
@@ -1,4 +1,5 @@
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
-DB_HOST=
+DB_USER=bbmdlrdx
+DB_PASSWORD=vdfUrO_e1XqlTP6IKc15gcdd1jbJOJ9i
+DB_NAME=bbmdlrdx
+DB_HOST=suleiman.db.elephantsql.com
+NODE_ENV=development
