--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"sequelize-cli": "^6.2.0"
 	},
 	"dependencies": {
+		"bcrypt": "^5.0.0",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"express-es6-template-engine": "^2.2.3",
