--- a/dist.env
+++ b/dist.env
@@ -1,5 +1,6 @@
-DB_USER=bbmdlrdx
-DB_PASSWORD=vdfUrO_e1XqlTP6IKc15gcdd1jbJOJ9i
-DB_NAME=bbmdlrdx
-DB_HOST=suleiman.db.elephantsql.com
+DB_USER=
+DB_PASSWORD=
+DB_NAME=
+DB_HOST=
+SESSION_SECRET=
 NODE_ENV=development
